--- a/Frustration-detection.mdx
+++ b/Frustration-detection.mdx
@@ -1,12 +1,9 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
----
-
----
-title: "New file"
+title: "Conversation Labeling"
 description: "Description of your new file."
 ---
+
+***
 
 # Conversation Labeling
 
