--- a/api-usage-example-chatbot.mdx
+++ b/api-usage-example-chatbot.mdx
@@ -16,7 +16,7 @@ Before you begin, make sure you have the following:
 The API endpoint for creating a chatbot is: 
 
 ```
-https://app-chatwize.com/api/v1/chatbot/create
+https://app.chatwize.ai/api/v1/chatbot/create
 ```
 
 ## Request Body
@@ -71,7 +71,7 @@ Here're example command sto create a chatbot using the Chatwize API:
 
 
 ```bash Curl
-curl --location --request POST 'https://app-chatwize.com/api/v1/chatbot/create' \
+curl --location --request POST 'https://app.chatwize.ai/api/v1/chatbot/create' \
 --header 'Content-Type: application/json' \
 --header 'Authorization: Bearer <token>' \
 --data-raw '{
@@ -92,7 +92,7 @@ curl --location --request POST 'https://app-chatwize.com/api/v1/chatbot/create' 
 ```py Python
 import requests
 
-url = 'https://app-chatwize.com/api/v1/chatbot/create'
+url = 'https://app.chatwize.ai/api/v1/chatbot/create'
 headers = {
     'Content-Type': 'application/json',
     'Authorization': 'Bearer <token>'
@@ -125,7 +125,7 @@ else:
 ```ts JavaScript
 const axios = require('axios');
 
-const url = 'https://app-chatwize.com/api/v1/chatbot/create';
+const url = 'https://app.chatwize.ai/api/v1/chatbot/create';
 const headers = {
     'Content-Type': 'application/json',
     'Authorization': 'Bearer <token>'
