--- a/api-usage-example-source.mdx
+++ b/api-usage-example-source.mdx
@@ -13,7 +13,7 @@ Before you begin, make sure you have the following:
 
 ## API Endpoint
 
-The API endpoint for uploading data sources to your chatbot is: `https://app-chatwize.com/api/v1/chatbot/{uuid}/data-source/url`.
+The API endpoint for uploading data sources to your chatbot is: `https://app.chatwize.ai/api/v1/chatbot/{uuid}/data-source/url`.
 
 <Warning>Make sure to replace `{uuid}` with the UUID of your chatbot..</Warning>
 
@@ -38,7 +38,7 @@ Here're example command sto create a chatbot using the Chatwize API:
 <CodeGroup>
 
 ```bash Curl
-curl --location --request POST 'https://app-chatwize.com/api/v1/chatbot/{uuid}/data-source/url' \
+curl --location --request POST 'https://app.chatwize.ai/api/v1/chatbot/{uuid}/data-source/url' \
 --header 'Content-Type: application/json' \
 --header 'Authorization: Bearer <token>' \
 --data-raw '{
@@ -49,7 +49,7 @@ curl --location --request POST 'https://app-chatwize.com/api/v1/chatbot/{uuid}/d
 ```py Python
 import requests
 
-url = 'https://app-chatwize.com/api/v1/chatbot/{uuid}/data-source/url'
+url = 'https://app.chatwize.ai/api/v1/chatbot/{uuid}/data-source/url'
 headers = {
     'Content-Type': 'application/json',
     'Authorization': 'Bearer <token>'
@@ -76,7 +76,7 @@ else:
 ```ts JavaScript
 const axios = require('axios');
 
-const url = 'https://app-chatwize.com/api/v1/chatbot/{uuid}/data-source/url';
+const url = 'https://app.chatwize.ai/api/v1/chatbot/{uuid}/data-source/url';
 const headers = {
     'Content-Type': 'application/json',
     'Authorization': 'Bearer <token>'
