--- a/best-practices.mdx
+++ b/best-practices.mdx
@@ -39,7 +39,7 @@ you see can be very different from what our scraper captures. Furthermore, most 
   <img src="/images/best-practices-1.png" />
 </Frame>
 
-_Chatwize’s own pricing table on https://Chatwize.com/pricing as rendered via the Chrome browser._
+_Chatwize’s own pricing table on https://Chatwize.ai/pricing as rendered via the Chrome browser._
 
 <Frame>
   <img src="/images/best-practices-2.png" />
