--- a/fine-tuning-agent-intents.mdx
+++ b/fine-tuning-agent-intents.mdx
@@ -1,6 +1,6 @@
 When your chatbot has multiple AI Agents, our AI Supervisor automatically assigns the most appropriate Agent to handle the user’s input queries. It does so by first determining the user’s intent, then looks for the most suitable Agent to help the user based on Agents’ names and descriptions.
 
-In our article [Multi-Agent Chatbot](https://guide.gpt-trainer.com/multi-agents-chatbot), we covered some best practices on Agent description writing and provided a number of examples. However, as comprehensive as the AI Supervisor tries to be, there will still be scenarios where Agent descriptions do not sufficiently cover all scenarios.
+In our article [Multi-Agent Chatbot](https://guide.chatwize.ai/multi-agents-chatbot), we covered some best practices on Agent description writing and provided a number of examples. However, as comprehensive as the AI Supervisor tries to be, there will still be scenarios where Agent descriptions do not sufficiently cover all scenarios.
 
 When AI Agents are created or modified, we automatically generate a number of intents along with example user queries to serve as reference for the AI Supervisor. These intents can be reviewed, customized, or deleted through the AI Supervisor Settings interface. The AI Supervisor makes use of these intents directly when evaluating each Agent’s specialty.
 
@@ -30,7 +30,7 @@ You can also edit AI-Generated Intents. Simply open the three-dot-menu next to t
 
 Note: AI-Generated Intents will be overwritten each time you edit the Agent name, description, or prompt. On the other hand, Fixed Intents are permanent and only deleted if you manually do so.
 
-[​](https://guide.gpt-trainer.com/fine-tuning-agent-intents#when-should-i-fine-tune-agent-intents)
+[​](https://guide.chatwize.ai/fine-tuning-agent-intents#when-should-i-fine-tune-agent-intents)
 When should I fine-tune Agent intents?
 --------------------------------------
 
