--- a/human-support-escalation.mdx
+++ b/human-support-escalation.mdx
@@ -78,7 +78,7 @@ To receive alerts on human support requests, follow the steps below.
 Each web browser manages permissions for notifications and sounds on a per-website basis. To ensure that you receive notifications
 properly, you'll need to enable both permissions within your browser settings. To proceed forward:
 
-1. Launch your browser where you will use [Chatwize platform](https://app-chatwize.com).
+1. Launch your browser where you will use [Chatwize platform](https://app.chatwize.ai).
 
 2. Enable your browser permissions by choosing option bellow:
 
@@ -157,7 +157,7 @@ properly, you'll need to enable both permissions within your browser settings. T
     <Steps>
       <Step title="Chatwize settings">
         Click on "Safari" in the top-left corner of your screen, then select
-        "Settings for app-chatwize.com".
+        "Settings for app.chatwize.ai".
 
         <Frame>
           <img src="/images/human-support-escalation-15.png" />
@@ -183,7 +183,7 @@ properly, you'll need to enable both permissions within your browser settings. T
 
       <Step title="Enable notifications">
         In the "Websites" tab, choose "Notifications" option and make sure that
-        permissions are set to "Allow" for **app-chatwize.com**
+        permissions are set to "Allow" for **app.chatwize.ai**
 
         <Frame>
           <img src="/images/human-support-escalation-18.png" />
