--- a/inbox-notifications.mdx
+++ b/inbox-notifications.mdx
@@ -10,14 +10,14 @@ First, please make sure that your browser permission allows our app to send you 
 
 # Google Chrome
 
-1. Go to https://app-chatwize.com/
+1. Go to https://app.chatwize.ai/
 1. Click the icon on the left of the URL input.
 1. Ensure the notifications are set to "Ask" or "Allow"
 
 
 # Mozilla Firefox
 
-1. Go to https://app-chatwize.com/
+1. Go to https://app.chatwize.ai/
 1. Click the icon on the left of the URL input.
 1. Ensure the "Send Notifications" permission is not blocked
 
@@ -25,6 +25,6 @@ First, please make sure that your browser permission allows our app to send you 
 
 1. Go to Safari > Preferences
 1. Open the Websites tab
-1. Ensure notification permission is set to Allow for https://app-chatwize.com/
+1. Ensure notification permission is set to Allow for https://app.chatwize.ai/
 
 Next, go to Inbox tab. 
