--- a/introduction.mdx
+++ b/introduction.mdx
@@ -48,7 +48,7 @@ These resources are designed to guide you step-by-step, ensuring a smooth and ef
   <Card
     title="Go to our app"
     icon="computer-classic"
-    href="https://app-chatwize.com"
+    href="https://app.chatwize.ai"
     color="#309C95"
   >
     If you already have an account, you can go directly to our app and use it
