--- a/multi-agents-chatbot.mdx
+++ b/multi-agents-chatbot.mdx
@@ -92,7 +92,7 @@ On the surface, your users will not know that they are engaging with multiple AI
 
 In our AI Supervisor routing design, we use an algorithm that balances latency with performance. It will not always give you 100% accuracy, but you can get pretty close if you design your chatbots effectively.
 
-[​](https://guide-chatwize.com/multi-agents-chatbot#debugging-the-chatbot)
+[​](https://guide.chatwize.ai/multi-agents-chatbot#debugging-the-chatbot)
 Debugging the chatbot
 ---------------------
 
@@ -120,6 +120,6 @@ This ensures that the chatbot will generate an answer based on what you revised 
 
 If you’d like to make the Agent more robust and consistent in general, you can curate the training data, choose a more powerful LLM, or be more explicit in your base prompt.
 
-To learn some best practices for training the chatbot, see [best practices for preparing training data](https://guide-chatwize.com/best-practices)
+To learn some best practices for training the chatbot, see [best practices for preparing training data](https://guide.chatwize.ai/best-practices)
 
-To learn more about fine-tuning Agent intents, please check out the article [Fine-Tuning Agent Intents](https://guide-chatwize.com/fine-tuning-agent-intents).
+To learn more about fine-tuning Agent intents, please check out the article [Fine-Tuning Agent Intents](https://guide.chatwize.ai/fine-tuning-agent-intents).
