--- a/user-identity.mdx
+++ b/user-identity.mdx
@@ -93,7 +93,7 @@ Here, you will need to update the **token** property with custom token. Here's a
       token: <"Custom token">
   }
 </script>
-<script src="https://app-chatwize.com/widget-asset.min.js" defer></script>
+<script src="https://app.chatwize.ai/widget-asset.min.js" defer></script>
 ```
 
 You can also directly update the **GPTTConfig** object with your token using a **JavaScript** call.
@@ -113,7 +113,7 @@ Append the **token** parameter to the **URL** in the src attribute, replacing **
 
 ```html
 <iframe
-  src="https://app-chatwize.com/widget/162223v?token=<custom_token>"
+  src="https://app.chatwize.ai/widget/162223v?token=<custom_token>"
   width="100%"
   height="500px"
   frameborder="0"
