Documentation edits made through Mintlify web editor

--- a/api-key.mdx
+++ b/api-key.mdx
@@ -1,9 +1,10 @@
 ---
-title: Getting a Chatwize API Key
+title: "Getting a Chatwize API Key"
+description: "Learn how to get a Chatwize API Key to start building powerful integrations and automations with ease. Your journey begins here."
 ---
 
 The following guide walks you through how to obtain an API key. If you already have your API key,
-you can also explore practical examples and integration tips to jump start your journey with Chatwize. Let’s begin!
+you can also explore practical examples and integration tips to jump start your journey with Chatwize. Let’s begin\!
 
 ## Step 1: Access Chatwize Platform
 
@@ -20,7 +21,7 @@ After successfully logging in, you’ll be directed to the app. Look for the “
 navigation bar. Click on it to access your account settings.
 
 <Frame>
-  <img src="/images/api-key-1.png" />
+  ![](/images/api-key-1.png)
 </Frame>
 
 ## Step 4: Navigate to API Keys Section
@@ -29,7 +30,7 @@ Inside your account settings, you will find an “API Keys” section. Within th
 you should see an option to “Generate new key”. Click on it to initiate the process of creating a new API key.
 
 <Frame>
-  <img src="/images/api-key-2.png" />
+  ![](/images/api-key-2.png)
 </Frame>
 
 ## Step 5: Enter Key Description and Generate
@@ -44,7 +45,7 @@ Once you’ve entered the description, click the “Generate” button to create
 </Warning>
 
 <Frame>
-  <img src="/images/api-key-3.png" />
+  ![](/images/api-key-3.png)
 </Frame>
 
 Now, you’ve successfully requested, generated, and saved your Chatwize API key.
