--- a/creating-first-chatbot.mdx
+++ b/creating-first-chatbot.mdx
@@ -1,5 +1,5 @@
 ---
-title: Create Your First Chatbot
+title: "Create Your First Chatbot"
 ---
 
 To get started, first log in to your account. If this is your first time using Chatwize, you will be asked to complete some initial onboarding steps. Afterwards, you will be presented with the ability to build an AI chatbot from one of our templates:
@@ -10,7 +10,9 @@ To get started, first log in to your account. If this is your first time using C
 
 Click on “Create Chatbot”. Then, you will be given a few personas to characterize your AI Agent based on your use case.
 
-![](create-chatbot-15.png)These personas have been predefined with a number of use-case-specific customizations, so they work out of the box, for the most part. Each persona has a different setup flow, but all of them should be very easy to follow.
+![](create-chatbot-15.png)
+
+These personas have been predefined with a number of use-case-specific customizations, so they work out of the box, for the most part. Each persona has a different setup flow, but all of them should be very easy to follow.
 
 Let’s take Client Champion for example. After you select the persona, you can pick your AI Agent’s specialty. In our case, we will go with Customer Support. Next, we tell the system which company the AI Agent represents, as well as the human support team’s contact in case issues need to be escalated.
 
@@ -18,7 +20,9 @@ Depending on how strictly you want the AI Agent to stick to its training data (y
 
 Click “Continue”. Then, since this is a client-facing chatbot, you will be asked to configure a data collection form from the user.
 
-![](create-chatbot-17.png)Here, you can define custom form fields, make certain fields mandatory, make the whole form mandatory, make the form show up only after certain number of Q\&As, and much more. When you user submits the form, the data is collected and assocated with the conversation session. You can then export it as a CSV, or have it sent to you automatically by email or to a CRM via webhook.
+![](create-chatbot-17.png)
+
+Here, you can define custom form fields, make certain fields mandatory, make the whole form mandatory, make the form show up only after certain number of Q&As, and much more. When you user submits the form, the data is collected and assocated with the conversation session. You can then export it as a CSV, or have it sent to you automatically by email or to a CRM via webhook.
 
 If you don’t want a form, simply hit “Skip step” on the top left next to the title.
 
@@ -26,7 +30,7 @@ Next, let’s edit the appearance of the chat widget. In order to make it themat
 
 ## Uploading Training Data
 
-Finally, you are ready to train your AI Agent with your own data!![](chatwizer.png)
+Finally, you are ready to train your AI Agent with your own data\!![](chatwizer.png)
 
 You can upload relevant training data (PDFs, Word, txt) or question and answer after making the chatbot. If you have Excel tables, CSVs, images, or YouTube videos, you can upload them later in the **Sources** tab on the left navigation bar.
 
@@ -45,8 +49,6 @@ When you are ready to deploy your chatbot, head to the **Go Live** tab.
 If you want to share the chatbot as a standalone page, simply click **Link**. You should see a share link automatically generated for you.
 
 If you want to embed the chatbot onto a web page, click **Website**. Detailed instructions will be displayed on the new right sidebar.
-
-
 
 ![](CHAT.png)
 
