Documentation edits made through Mintlify web editor

--- a/creating-first-chatbot.mdx
+++ b/creating-first-chatbot.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Create Your First Chatbot"
+description: "Create Your First Chatbot with Chatwize by logging in and following a simple onboarding flow to launch your first AI assistant from a template."
 ---
 
 To get started, first log in to your account. If this is your first time using Chatwize, you will be asked to complete some initial onboarding steps. Afterwards, you will be presented with the ability to build an AI chatbot from one of our templates:
