Documentation edits made through Mintlify web editor

--- a/inbox-notifications.mdx
+++ b/inbox-notifications.mdx
@@ -1,5 +1,6 @@
 ---
-title: Inbox Notifications
+title: "Inbox Notifications"
+description: "Enable and troubleshoot Inbox Notifications in Chatwize to receive alerts when new conversations start or human support is requested."
 ---
 
 Chatwize can be configured to provide automatic notification pings when new AI conversations start or when Human support agent is requested.
@@ -11,20 +12,19 @@ First, please make sure that your browser permission allows our app to send you 
 # Google Chrome
 
 1. Go to https://app.chatwize.ai/
-1. Click the icon on the left of the URL input.
-1. Ensure the notifications are set to "Ask" or "Allow"
-
+2. Click the icon on the left of the URL input.
+3. Ensure the notifications are set to "Ask" or "Allow"
 
 # Mozilla Firefox
 
 1. Go to https://app.chatwize.ai/
-1. Click the icon on the left of the URL input.
-1. Ensure the "Send Notifications" permission is not blocked
+2. Click the icon on the left of the URL input.
+3. Ensure the "Send Notifications" permission is not blocked
 
 #Safari
 
-1. Go to Safari > Preferences
-1. Open the Websites tab
-1. Ensure notification permission is set to Allow for https://app.chatwize.ai/
+1. Go to Safari \> Preferences
+2. Open the Websites tab
+3. Ensure notification permission is set to Allow for https://app.chatwize.ai/
 
-Next, go to Inbox tab. 
+Next, go to Inbox tab.
