--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,8 +1,9 @@
 ---
-title: Introduction
+title: "Introduction"
+description: "Introduction to Chatwize – your complete guide to building, customizing, and managing AI chatbots using our powerful, beginner-friendly platform."
 ---
 
-## Welcome to Chatwize!
+## Welcome to Chatwize\!
 
 Discover the path to crafting your very own chatbot with Chatwize, a platform that simplifies the process of chatbot creation and integration.
 Our comprehensive guide will lead you through various aspects of chatbot development and management, tailored for both beginners and experienced users.
@@ -20,16 +21,12 @@ What You'll Learn:
 To begin, start by accessing information through the left side menu or by clicking on the main topics below.
 These resources are designed to guide you step-by-step, ensuring a smooth and efficient learning experienc
 
-<CardGroup cols={2}>
+<CardGroup cols="2">
   <Card title="Chatbot" icon="message-bot" href="/creating-first-chatbot">
     Learn how to create and customize your chatbot, tailoring its functionality
     and appearance to your specific needs.
   </Card>
-  <Card
-    title="Discover API's"
-    icon="code"
-    href="/api-reference/chatbots/create"
-  >
+  <Card title="Discover API's" icon="code" href="/api-reference/chatbots/create">
     Interact directly with your Chatwize account and bot settings via API
     endpoints.
   </Card>
@@ -37,20 +34,11 @@ These resources are designed to guide you step-by-step, ensuring a smooth and ef
     Manage the authentication process, ensuring that only authorized users gain
     access to your system.
   </Card>
-  <Card
-    title="Visit Chatwize Website"
-    icon="browser"
-    href="https://chatwize.ai"
-  >
+  <Card title="Visit Chatwize Website" icon="browser" href="https://chatwize.ai">
     Review information such as features, use cases, demos, and pricing on our
     app's home page.
   </Card>
-  <Card
-    title="Go to our app"
-    icon="computer-classic"
-    href="https://app.chatwize.ai"
-    color="#309C95"
-  >
+  <Card title="Go to our app" icon="computer-classic" color="#309C95" href="https://app.chatwize.ai">
     If you already have an account, you can go directly to our app and use it
     via our GUI.
   </Card>
