--- a/lead-collection.mdx
+++ b/lead-collection.mdx
@@ -1,3 +1,8 @@
+---
+title: "Lead collection"
+description: "Lead collection explains how to gather user data via forms or conversations in AI Chat, with tips on setup and webhook integration to CRMs."
+---
+
 There are two ways to collect data from users when they engage with your AI Chat.
 
 1. Through a form
@@ -36,6 +41,8 @@ The behavior of your AI Chat is governed by your AI Agent(s)‘s prompt. To revi
 If you created your AI Chat using a template, then you may be using a default prompt we generated for you. If this is the first time you are configuring an AI Agent prompt, we recommend you to read our **Prompt Engineering guide** for best practices.
 
 ![](lead-collection-16.png)
+
+
 ![](lead-collection-17.PNG)
 
 Configure your prompt to include detailed instructions for collecting user data. Make sure you cover when, what, and how. For example, here is a snippet that can serve as a guide:
@@ -60,3 +67,4 @@ Inside, you can create variables to store information that is collected from the
 ![](https://mintlify.s3.us-west-1.amazonaws.com/paladinmaxinc/images/lead-collection-19.png)
 
 *The more examples you provide, the better it is for the AI to understand the format you’re looking for.*
+```
