--- a/human-support-escalation.mdx
+++ b/human-support-escalation.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Human Support Escalation"
+description: "Human Support Escalation in Chatwize lets collaborators take over ongoing chats when human expertise is required."
 ---
 
 As powerful as AI chatbots can be, sometimes human accountability and expertise is still needed. Chatwize's
@@ -11,13 +12,13 @@ session and take over the conversation.
 Go to Customizations tab. Under the “Settings” section, Click “Human Support Handover”.
 
 <Frame>
-  <img src="/images/human-support-escalation.25.png" />
+  ![](/images/human-support-escalation.25.png)
 </Frame>
 
 Toggle on “Enable Human Escalation”. Then a number of configuration options should appear.
 
 <Frame>
-  <img src="/images/human-support-escalation-26.png" />
+  ![](/images/human-support-escalation-26.png)
 </Frame>
 
 You can configure what the AI says when human escalation request is detected during the conversation, as well as what shows up when a human agent takes over or leaves the chat. For more advanced use cases, you can even define custom phrases or intents that the AI should be looking out for. If the AI responds with that phrase, your human agents will receive a notification immediately.
@@ -27,13 +28,13 @@ To test your human support escalation setup, you’ll need to generate a public 
 Go to “Go Live” tab, click “Share”. You may need to change your chatbot visibility settings temporarily in order to generate the link.
 
 <Frame>
-  <img src="/images/human-support-escalation-27.png" />
+  ![](/images/human-support-escalation-27.png)
 </Frame>
 
 Once you have the link, open a new browser tab and navigate to it. Do not close the original Chatwize tab. You should be taken to the chatbot as a typical user. You can then test it by submitting queries requesting human support.
 
 <Frame>
-  <img src="/images/human-support-escalation-28-1.png" />
+  ![](/images/human-support-escalation-28-1.png)
 </Frame>
 
 To take over as a human agent, head over to "Inbox" in your Chatwize browser tab. You should see an orange dot
@@ -41,7 +42,7 @@ next to the session requesting human support. Click it and you will be able to e
 typing a response in the chat input text box at the bottom of the chat log.
 
 <Frame>
-  <img src="/images/human-support-escalation-6.png" />
+  ![](/images/human-support-escalation-6.png)
 </Frame>
 
 As soon as you send the first message, AI Supervisor and all AI Agents will be disabled. You can have a direct conversation with your
@@ -49,7 +50,7 @@ user for as long as you'd like. Once you are done, you can end the live chat ses
 "End Live Chat".
 
 <Frame>
-  <img src="/images/human-support-escalation-7.png" />
+  ![](/images/human-support-escalation-7.png)
 </Frame>
 
 You may stay and continue to monitor the user's interaction with the chatbot as the AI regains control over response generation.
@@ -64,13 +65,11 @@ To receive alerts on human support requests, follow the steps below.
 ### Turn on Alert Modes
 
 1. Go to Customizations tab on the left navigation bar.
-
 2. Enable Human Escalation Notifications toggle - This ensures that notifications related to user support requests are activated.
-
 3. Enable Notification Sound - Activate this option if you wish to receive an audible alert along with the notifications.
 
 <Frame>
-  <img src="/images/human-support-escalation-15.png" />
+  ![](/images/human-support-escalation-15.png)
 </Frame>
 
 ### Browser Permissions
@@ -79,114 +78,104 @@ Each web browser manages permissions for notifications and sounds on a per-websi
 properly, you'll need to enable both permissions within your browser settings. To proceed forward:
 
 1. Launch your browser where you will use [Chatwize platform](https://app.chatwize.ai).
-
 2. Enable your browser permissions by choosing option bellow:
 
 <AccordionGroup>
-  <Accordion icon="chrome" title="Google Chrome" iconType="duotone">
+  <Accordion title="Google Chrome" icon="chrome" iconType="duotone">
     <Steps>
       <Step title="Settings">
         Click on the button near url in the top-left corner, then select "Site
         settings".
 
         <Frame>
-          <img src="/images/human-support-escalation-9.png" />
+          ![](/images/human-support-escalation-9.png)
         </Frame>
       </Step>
-
       <Step title="Enable permissions">
         Make sure that "Notifications" and "Sound" are set to Allow in
         "Permissions settings".
 
         <Frame>
-          <img src="/images/human-support-escalation-10.png" />
+          ![](/images/human-support-escalation-10.png)
         </Frame>
       </Step>
     </Steps>
   </Accordion>
-
   {" "}
 
-  <Accordion icon="firefox-browser" title="Firefox" iconType="duotone">
+  <Accordion title="Firefox" icon="firefox-browser" iconType="duotone">
     <Steps>
       <Step title="Settings">
         Click on the button near url in the top-left corner, then select
         "Protection settings".
 
         <Frame>
-          <img src="/images/human-support-escalation-11.png" />
+          ![](/images/human-support-escalation-11.png)
         </Frame>
       </Step>
-
       <Step title="Unblock Chatwize">
         Scroll to "Permissions" and adjust the default settings for "Speaker
         Selection" and "Notifications". Ensure that the Chatwize platform is
         not blocked for both options.
 
         <Frame>
-          <img src="/images/human-support-escalation-12.png" />
+          ![](/images/human-support-escalation-12.png)
         </Frame>
       </Step>
     </Steps>
   </Accordion>
-
   {" "}
 
-  <Accordion icon="edge" title="Microsoft Edge" iconType="duotone">
+  <Accordion title="Microsoft Edge" icon="edge" iconType="duotone">
     <Steps>
       <Step title="Settings">
         Click on the button near url in the top-left corner, then select
         “Permissions for this site”.
 
         <Frame>
-          <img src="/images/human-support-escalation-13.png" />
+          ![](/images/human-support-escalation-13.png)
         </Frame>
       </Step>
-
       <Step title="Enable permissions">
         Make sure that "Notifications" are set to Allow in "Permissions settings"
 
         <Frame>
-          <img src="/images/human-support-escalation-14.png" />
+          ![](/images/human-support-escalation-14.png)
         </Frame>
       </Step>
     </Steps>
   </Accordion>
-
-  <Accordion icon="safari" title="Safari" iconType="duotone">
+  <Accordion title="Safari" icon="safari" iconType="duotone">
     <Steps>
       <Step title="Chatwize settings">
         Click on "Safari" in the top-left corner of your screen, then select
         "Settings for app.chatwize.ai".
 
         <Frame>
-          <img src="/images/human-support-escalation-15.png" />
+          ![](/images/human-support-escalation-15.png)
         </Frame>
       </Step>
-
       <Step title="Enable pop-ups">
         Make sure that "Pop-up Windows" are set to Allow.
 
         <Frame>
-          <img src="/images/human-support-escalation-16.png" />
+          ![](/images/human-support-escalation-16.png)
         </Frame>
       </Step>
-
       <Step title="Settings">
         Click on "Safari" in the top-left corner of your screen, then select
         "Settings".
 
         <Frame>
-          <img src="/images/human-support-escalation-17.png" />
+          ![](/images/human-support-escalation-17.png)
         </Frame>
       </Step>
-
       <Step title="Enable notifications">
         In the "Websites" tab, choose "Notifications" option and make sure that
         permissions are set to "Allow" for **app.chatwize.ai**
 
         <Frame>
-          <img src="/images/human-support-escalation-18.png" />
+          ![](/images/human-support-escalation-18.png)
         </Frame>
       </Step>
     </Steps>
@@ -198,66 +187,62 @@ properly, you'll need to enable both permissions within your browser settings. T
 Operating systems also have their own permissions that allow setting restrictions to notifications
 for different apps, including browsers. To enable notifications, choose your operating system below:
 
-<Note>If you are using **Safari**, you do not need to follow these steps.</Note>
+<Note>
+  If you are using **Safari**, you do not need to follow these steps.
+</Note>
 
 <AccordionGroup>
-  <Accordion icon="apple" title="Apple" iconType="duotone">
+  <Accordion title="Apple" icon="apple" iconType="duotone">
     <Steps>
       <Step title="Settings">
         Click on the "Apple" in the top-left corner, then select "System
         Settings".
 
         <Frame>
-          <img src="/images/human-support-escalation-19.png" />
+          ![](/images/human-support-escalation-19.png)
         </Frame>
       </Step>
-
       <Step title="Browser notifications">
         Choose "Notifications" option and select the browser you wish to use.
 
         <Frame>
-          <img src="/images/human-support-escalation-20.png" />
+          ![](/images/human-support-escalation-20.png)
         </Frame>
       </Step>
-
       <Step title="Enable notifications">
         Make sure that "Allow notifications" option is enabled.
 
         <Frame>
-          <img src="/images/human-support-escalation-21.png" />
+          ![](/images/human-support-escalation-21.png)
         </Frame>
       </Step>
     </Steps>
   </Accordion>
-
-  <Accordion icon="Windows" title="Windows" iconType="duotone">
+  <Accordion title="Windows" icon="Windows" iconType="duotone">
     <Steps>
       <Step title="Settings">
         In the search bar, type "notifications" and select the "Turn app
         notifications on or off" option from the search results.
 
         <Frame>
-          <img src="/images/human-support-escalation-22.png" />
+          ![](/images/human-support-escalation-22.png)
         </Frame>
       </Step>
-
       <Step title="System notifications">
         Enable system notifications **(Optional)** and select your preferred
         browser under "Notifications from apps and other senders" list.
 
         <Frame>
-          <img src="/images/human-support-escalation-23.png" />
+          ![](/images/human-support-escalation-23.png)
         </Frame>
       </Step>
-
       <Step title="Browser notifications">
         Make sure that "Notifications" are On for your browser.
 
         <Frame>
-          <img src="/images/human-support-escalation-24.png" />
+          ![](/images/human-support-escalation-24.png)
         </Frame>
       </Step>
     </Steps>
   </Accordion>
 </AccordionGroup>
-
